[package]
name = "eth-gas-delta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
itertools = "0.10.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tabled = { version = "0.12.0", features = ["color"] }
